[package]
name = "nexus-browser"
version = "1.0.0"
edition = "2021"
authors = ["Elite Rust Systems Developer"]
description = "Nexus Browser - Premium Rust Edition (Single-File Architecture)"

[dependencies]
# Windowing & Event Loop (Paired specifically with wry 0.45)
tao = "0.30"

# Webview Engine
wry = "0.45"

# Async Runtime (Full features for multi-threading, fs, time, and sync primitives)
tokio = { version = "1", features = ["full"] }

# HTTP Client (Explicitly enabling SOCKS for Tor/Proxy, JSON for IPC, and Streams)
reqwest = { version = "0.12", default-features = true, features = ["json", "socks", "stream"] }

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL Parsing & Encoding (For the Search Router)
url = "2"

# Cryptographically Secure Randomness (For the Password Vault)
rand = "0.8"

# ============================================================================
# ELITE BUILD OPTIMIZATION PROFILE
# Run `cargo build --release` to compile the binary with maximum optimization,
# Link-Time Optimization (LTO), and stripped symbols for minimal binary size.
# ============================================================================
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
