[package]
name = "nexus-browser"
version = "1.0.0"
edition = "2021"
authors = ["Elite Rust Systems Engineer"]
description = "Nexus Browser - Ultra-Optimized 4GB DDR3 Edition"

[[bin]]
name = "nexus-browser"
path = "main.rs"

[dependencies]
tao = "0.30"
wry = "0.45"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "fs", "sync", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "json", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
url = "2"
rand = { version = "0.8", default-features = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
